ExampleANTLR/target/generated-sources/antlr4/ejemplo/HelloParser.java
// Generated from Hello.g4 by ANTLR 4.4

	package ejemplo;	
	import java.util.Map;
	import java.util.HashMap;
	import abstracto.ASTNode;
	import abstracto.Addition;
	import abstracto.If;
	import abstracto.Multiplication;
	import abstracto.Println;
	import abstracto.Constant;
	import abstracto.varDecl;
	import abstracto.VarAssign;
	import abstracto.VarRef;
	import abstracto.Comparator;
	import abstracto.ComparatorDoble;
	import abstracto.DeleteTable;
	
	

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, VAR=2, PRINTLN=3, IF=4, ELSE=5, ELSEIF=6, PLUS=7, MINUS=8, 
		MULT=9, DIV=10, AND=11, OR=12, NOT=13, GT=14, LT=15, GEQ=16, LEQ=17, EQ=18, 
		NEQ=19, ASSIGN=20, BRACKET_OP=21, BRACKET_CLOSE=22, PAR_OP=23, PAR_CLOSE=24, 
		PUNTO_COMA=25, BOOLEAN=26, ID=27, NUMBER=28, WS=29;
	public static final String[] tokenNames = {
		"<INVALID>", "'program'", "'var'", "'println'", "'if'", "'else'", "'elseif'", 
		"'+'", "'-'", "'*'", "'/'", "'&&'", "'||'", "'!'", "'>'", "'<'", "'>='", 
		"'<='", "'=='", "'!='", "'='", "'{'", "'}'", "'('", "')'", "';'", "BOOLEAN", 
		"ID", "NUMBER", "WS"
	};
	public static final int
		RULE_program = 0, RULE_sentence = 1, RULE_println = 2, RULE_conditional = 3, 
		RULE_var_decl = 4, RULE_var_assign = 5, RULE_expresion = 6, RULE_factor = 7, 
		RULE_term = 8, RULE_term2 = 9, RULE_termPri = 10, RULE_comp = 11, RULE_valor = 12;
	public static final String[] ruleNames = {
		"program", "sentence", "println", "conditional", "var_decl", "var_assign", 
		"expresion", "factor", "term", "term2", "termPri", "comp", "valor"
	};

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, Object> dataType= new HashMap<String, Object>();
		Map<String, Object> tableSymbols= new HashMap<String, Object>();
		
		
		public static List <Object> listaIf= new ArrayList<Object>();
		
		Hello h= new Hello();
		public boolean hayIf=false;	
		public boolean banderasOp=false;
		int contadorEtiquetas=0;
		int contadorMsg=0;
		int jumpDone=0;
		

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public TerminalNode BRACKET_OP() { return getToken(HelloParser.BRACKET_OP, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(HelloParser.BRACKET_CLOSE, 0); }
		public TerminalNode PROGRAMA() { return getToken(HelloParser.PROGRAMA, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26); match(PROGRAMA);
			setState(27); match(ID);
			setState(28); match(BRACKET_OP);
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINTLN) | (1L << IF) | (1L << ID))) != 0)) {
				{
				{
				setState(29); sentence();
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(35); match(BRACKET_CLOSE);

				
				System.out.println("mov esp,ebp");
				System.out.println("pop ebp");
				System.out.println("mov eax,0");
				System.out.println("ret");

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public Var_assignContext var_assign() {
			return getRuleContext(Var_assignContext.class,0);
		}
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(44);
			switch (_input.LA(1)) {
			case PRINTLN:
				enterOuterAlt(_localctx, 1);
				{
				setState(38); println();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(39); conditional();
				System.out.println(".done"+Integer.toString(jumpDone)+": "); jumpDone++; contadorEtiquetas++;	
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(42); var_decl();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(43); var_assign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintlnContext extends ParserRuleContext {
		public TermPriContext termPri;
		public TerminalNode PRINTLN() { return getToken(HelloParser.PRINTLN, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(HelloParser.PUNTO_COMA, 0); }
		public TermPriContext termPri() {
			return getRuleContext(TermPriContext.class,0);
		}
		public PrintlnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_println; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterPrintln(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitPrintln(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitPrintln(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintlnContext println() throws RecognitionException {
		PrintlnContext _localctx = new PrintlnContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_println);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); match(PRINTLN);
			setState(47); ((PrintlnContext)_localctx).termPri = termPri();
			setState(48); match(PUNTO_COMA);

				
				//System.out.println((((PrintlnContext)_localctx).termPri!=null?_input.getText(((PrintlnContext)_localctx).termPri.start,((PrintlnContext)_localctx).termPri.stop):null));
				System.out.print("call printf\nadd esp , 8\n");
				

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(HelloParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(HelloParser.IF, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(HelloParser.PAR_CLOSE, 0); }
		public List<TerminalNode> BRACKET_OP() { return getTokens(HelloParser.BRACKET_OP); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<TerminalNode> BRACKET_CLOSE() { return getTokens(HelloParser.BRACKET_CLOSE); }
		public TerminalNode PAR_OP() { return getToken(HelloParser.PAR_OP, 0); }
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TerminalNode BRACKET_CLOSE(int i) {
			return getToken(HelloParser.BRACKET_CLOSE, i);
		}
		public TerminalNode BRACKET_OP(int i) {
			return getToken(HelloParser.BRACKET_OP, i);
		}
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitConditional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitConditional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_conditional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); match(IF);
			setState(52); match(PAR_OP);
			setState(53); comp();
			setState(54); match(PAR_CLOSE);

							hayIf=true;
							//{System.out.println(".done: ");}
						
			setState(56); match(BRACKET_OP);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINTLN) | (1L << IF) | (1L << ID))) != 0)) {
				{
				{
				setState(57); sentence();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63); match(BRACKET_CLOSE);
			setState(64); match(ELSE);
			 
							//{System.out.println(".done: ");}
							System.out.println("jmp .done"+Integer.toString(jumpDone));
							
							System.out.println(".else"+Integer.toString(contadorEtiquetas)+": ");
						
			setState(66); match(BRACKET_OP);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINTLN) | (1L << IF) | (1L << ID))) != 0)) {
				{
				{
				setState(67); sentence();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73); match(BRACKET_CLOSE);

							
							hayIf=false;
										
						
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public TerminalNode VAR() { return getToken(HelloParser.VAR, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(HelloParser.PUNTO_COMA, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); match(VAR);
			setState(77); ((Var_declContext)_localctx).ID = match(ID);
			setState(78); match(PUNTO_COMA);

							
						if(hayIf){
							listaIf.add((((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null));
						}
						
						
						if(tableSymbols.containsKey((((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null))){
							System.out.println("Error variable ya fue declarada "+(((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null));	
						}
						else{
						tableSymbols.put((((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null),0);
						dataType.put((((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null),"entero");
						
						}
					
					
					
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assignContext extends ParserRuleContext {
		public Token ID;
		public TermContext term;
		public ExpresionContext expresion;
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(HelloParser.ASSIGN, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(HelloParser.PUNTO_COMA, 0); }
		public Var_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterVar_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitVar_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitVar_assign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_assignContext var_assign() throws RecognitionException {
		Var_assignContext _localctx = new Var_assignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_assign);
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81); ((Var_assignContext)_localctx).ID = match(ID);
				setState(82); match(ASSIGN);
				setState(83); ((Var_assignContext)_localctx).term = term();
				setState(84); match(PUNTO_COMA);

						System.out.println("Valor de "+(((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null)+" valor "+(((Var_assignContext)_localctx).term!=null?_input.getText(((Var_assignContext)_localctx).term.start,((Var_assignContext)_localctx).term.stop):null));
				 		System.out.print("mov ["+(((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null)+"] ,eax\n");
				 	//	banderasOp=false;
				 	
				 		if(tableSymbols.containsKey((((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null))){
				 			
				 			/*if(dataType.get((((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null)).equals("entero")){
				 				
				 			}*/
				 			
				 			tableSymbols.put((((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null),(((Var_assignContext)_localctx).term!=null?_input.getText(((Var_assignContext)_localctx).term.start,((Var_assignContext)_localctx).term.stop):null));
				 			
				 			
				 			
				 			
				 		}else{
				 			System.out.println("Error variable no se encuentra "+(((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null));
				 		}
				 	
				 	
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87); ((Var_assignContext)_localctx).ID = match(ID);
				setState(88); match(ASSIGN);
				setState(89); ((Var_assignContext)_localctx).expresion = expresion();
				setState(90); match(PUNTO_COMA);

				 		
				 		System.out.println("Valor de "+(((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null)+" valor "+((Var_assignContext)_localctx).expresion.value);
				 		
				 		if(tableSymbols.containsKey((((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null))){
				 			
				 			/*if(dataType.get((((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null)).equals("entero")){
				 				
				 			}*/
				 			tableSymbols.put((((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null),((Var_assignContext)_localctx).expresion.value);

				 		}else{
				 			System.out.println("Error variable no se encuentra "+(((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null));
				 		}
				 		
				 		System.out.print("mov ["+(((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null)+"] ,eax\n");
				 		System.out.print("add esp,4\n");
				 	//	banderasOp=false;
				 		System.out.println("valor "+((Var_assignContext)_localctx).expresion.value);
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public Object value;
		public FactorContext t1;
		public FactorContext t2;
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(HelloParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(HelloParser.PLUS, i);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitExpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expresion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); ((ExpresionContext)_localctx).t1 = factor();
			((ExpresionContext)_localctx).value =  (int)((ExpresionContext)_localctx).t1.value;
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS) {
				{
				{
				setState(97); match(PLUS);
				setState(98); ((ExpresionContext)_localctx).t2 = factor();
				((ExpresionContext)_localctx).value =  (int)_localctx.value + (int)((ExpresionContext)_localctx).t2.value;
							
							System.out.println("pop ecx");
							System.out.println("pop eax");
							System.out.println("add eax,ecx");
							System.out.println("push eax");			

								
							
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public Object value;
		public Term2Context t1;
		public Term2Context t2;
		public List<Term2Context> term2() {
			return getRuleContexts(Term2Context.class);
		}
		public TerminalNode MULT(int i) {
			return getToken(HelloParser.MULT, i);
		}
		public List<TerminalNode> MULT() { return getTokens(HelloParser.MULT); }
		public Term2Context term2(int i) {
			return getRuleContext(Term2Context.class,i);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterFactor(this);
		}
		@Override
